--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -95,10 +95,10 @@ p {
   height: inherit;
 }
 
-#editIcon:hover {
+.editIcon > ion-icon:hover {
   color: #009578;
 }
-#trashIcon:hover {
+.trashIcon > ion-icon:hover {
   color: #e03131;
 }
 
@@ -248,4 +248,14 @@ select {
   flex-wrap: nowrap;
   /* width: 20%; */
   gap: 8px;
+}
+
+.bigFont {
+  font-size: 25px;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #009578;
+}
+
+.taskList {
+  min-height: 30px;
 }
